[package]
name = "rust-netrc"
version = "0.1.2"
description = "netrc support for Rust with support for reqwest"
keywords = ["netrc", "reqwest", "http", "client"]
authors = ["Hakim Taklanti <gribouille.git@gmail.com>"]
edition = "2021"
categories = ["network-programming"]
readme = "README.md"
repository = "https://github.com/gribouille/netrc"
documentation = "https://docs.rs/rust-netrc"
license = "MIT"
exclude = ["/.github"]

[lib]
name = "netrc"
path = "src/lib.rs"

[dependencies]
shellexpand = { version = "3.1.0", features = ["base-0", "tilde", "path"], default-features = false }
thiserror = "1.0.56"

[workspace]
members = ["reqwest-netrc"]
