[package]
name = "reqwest-netrc"
version = "0.1.1"
description = "netrc support for Rust with support for reqwest"
keywords = ["netrc", "reqwest", "http", "client"]
authors = ["Hakim Taklanti <gribouille.git@gmail.com>"]
edition = "2021"
categories = ["network-programming"]
readme = "../README.md"
repository = "https://github.com/gribouille/netrc"
documentation = "https://docs.rs/rust-netrc"
license = "MIT"


[dependencies]
rust-netrc = { path = "..", version = "0.1.1" }
reqwest-middleware = "0.2.4"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros"] }
wiremock = "0.5.22"
reqwest = "0.11.23"
