[package]
name = "reqwest-netrc"
version = "0.1.2"
description = "netrc support for Rust with support for reqwest"
keywords = ["netrc", "reqwest", "http", "client"]
authors = ["Hakim Taklanti <gribouille.git@gmail.com>"]
edition = "2021"
categories = ["network-programming"]
readme = "../README.md"
repository = "https://github.com/gribouille/netrc"
documentation = "https://docs.rs/rust-netrc"
license = "MIT"


[dependencies]
rust-netrc = { path = "..", version = "0.1.2" }
reqwest-middleware = "0.3.3"

[dev-dependencies]
tokio = { version = "1.35.1", features = ["macros"] }
wiremock = "0.6.2"
reqwest = "0.12.7"
